Fix request a brochure button on courses page so that the width fits the text content and it is aligned to the center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,15 +297,20 @@ ul li {
 }
 
 /* Button at the bottom of courses page */
+.button-div {
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 50px;
+}
+
 .button {
     text-decoration: none;
     background-color: #2c3a36;
     color: #e2e9e7;
     padding: 10px;
-    margin: 15 10 20 10;
+    margin: 15px 10px 20px 10px;
     border: 1px solid #333333;
-    display: block;
-    text-align: center;
+    width:fit-content;  
 }
 
 /* Brochure page */
